--- a/css/app.css
+++ b/css/app.css
@@ -6,7 +6,7 @@ body {
 }
 
 html {
-    width: 50%;
+    width: 40%;
     margin: auto;
     margin-top: 100px;
 }
@@ -18,7 +18,7 @@ html {
 form {
     display: flex;
     background-color: white;
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 
 main {
